Import of LESPEA/String-Palindrome-1.000 from CPAN.
gitpan-cpan-distribution: String-Palindrome
gitpan-cpan-version:      1.000
gitpan-cpan-path:         LESPEA/String-Palindrome-1.000.tar.gz
gitpan-cpan-author:       LESPEA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for String-Palindrome
 
+1.000       8/12/2010 2:01:30 AM (Central Daylight Time)
+    *   Switched to Dist::Zilla
+    *   Allow checking an array (or array ref) if it is a palindrome
+
 0.01    12/13/2009 08:53:52 PM (CST)
         First version, released on an unsuspecting world.
 
