--- a/README
+++ b/README
@@ -1,48 +1,117 @@
-String-Palindrome
+NAME
+    String::Palindrome - Determine if a string is a palindrome
 
-This is a really simply module that returns true if a string is a palindrome or
-not (the same string forwards and backwards).  There is one exportable
-subroutine, is_palindrome, which will perform as advertized
+VERSION
+    version 1.000
 
-
-INSTALLATION
-
-To install this module, run the following commands:
-
-	perl Makefile.PL
-	make
-	make test
-	make install
-
-SUPPORT AND DOCUMENTATION
-
-After installing, you can find documentation for this module with the
-perldoc command.
-
-    perldoc String::Palindrome
-
-You can also look for information at:
-
-    RT, CPAN's request tracker
-        http://rt.cpan.org/NoAuth/Bugs.html?Dist=String-Palindrome
-
-    AnnoCPAN, Annotated CPAN documentation
-        http://annocpan.org/dist/String-Palindrome
-
-    CPAN Ratings
-        http://cpanratings.perl.org/d/String-Palindrome
-
-    Search CPAN
-        http://search.cpan.org/dist/String-Palindrome/
+SYNOPSIS
+        use String::Palindrome qw/ is_palindrome /;
 
 
-LICENSE AND COPYRIGHT
+        #  Simple strings
 
-Copyright (C) 2009 Adam Lesperance
+        my $is     = 'abccba';
+        my $is_not = 'abcdef';
 
-This program is free software; you can redistribute it and/or modify it
-under the terms of either: the GNU General Public License as published
-by the Free Software Foundation; or the Artistic License.
+        is_palindrome( $is      );  # 1
 
-See http://dev.perl.org/licenses/ for more information.
+        is_palindrome( $is_not  );  # 0
+
+        is_palindrome( {a => 1} );  # undef
+        is_palindrome(          );  # undef
+
+
+
+        #  Arrays
+
+        my @is     = qw/ a ab cc ab a /;
+        my @is_not = qw/ a ab cc a ba /;
+
+        is_palindrome(  @is     );  # 1
+        is_palindrome( \@is     );  # 1
+
+        is_palindrome(  @is_not );  # 0
+        is_palindrome( \@is_not );  # 0
+
+        is_palindrome( []       );  # undef
+
+EXPORTS
+    *   is_palindrome
+
+FUNCTIONS
+  is_palindrome
+    Returns true if the string, array_ref, or array is a palindrome. If more
+    than one parameter is passed to the function, then it will blindly
+    assume that you want to treat them as an array to be tested. This means
+    that you could, theoretically, pass in a palindrome of array_refs and it
+    would still pass.
+
+    If only one arg is passed, then it is first checked to see if it is an
+    array ref. If it is an array ref it is treated as a normal array. If it
+    is a simple scalar, then it is treated as a string. If it is any other
+    type of ref, then undef is returned. Additionally, a blank array ref
+    also returns undef.
+
+AUTHOR
+    Adam Lesperance <lespea@gmail.com>
+
+SUPPORT
+    You can find documentation for this module with the perldoc command.
+
+      perldoc String::Palindrome
+
+  Websites
+    *   Search CPAN
+
+        <http://search.cpan.org/dist/String-Palindrome>
+
+    *   AnnoCPAN: Annotated CPAN documentation
+
+        <http://annocpan.org/dist/String-Palindrome>
+
+    *   CPAN Ratings
+
+        <http://cpanratings.perl.org/d/String-Palindrome>
+
+    *   CPAN Forum
+
+        <http://cpanforum.com/dist/String-Palindrome>
+
+    *   RT: CPAN's Bug Tracker
+
+        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=String-Palindrome>
+
+    *   CPANTS Kwalitee
+
+        <http://cpants.perl.org/dist/overview/String-Palindrome>
+
+    *   CPAN Testers Results
+
+        <http://cpantesters.org/distro/S/String-Palindrome.html>
+
+    *   CPAN Testers Matrix
+
+        <http://matrix.cpantesters.org/?dist=String-Palindrome>
+
+    *   Source Code Repository
+
+        The code is open to the world, and available for you to hack on.
+        Please feel free to browse it and play with it, or whatever. If you
+        want to contribute patches, please send me a diff or prod me to pull
+        from your repository :)
+
+        <git://github.com/lespea/String-Palindrome>
+
+  Bugs
+    Please report any bugs or feature requests to "bug-string-palindrome at
+    rt.cpan.org", or through the web interface at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=String-Palindrome>. I
+    will be notified, and then you'll automatically be notified of progress
+    on your bug as I make changes.
+
+COPYRIGHT AND LICENSE
+    This software is copyright (c) 2010 by Adam Lesperance.
+
+    This is free software; you can redistribute it and/or modify it under
+    the same terms as the Perl 5 programming language system itself.
 
