--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     String::Palindrome - Determine if a string is a palindrome
 
 VERSION
-    version 1.03
+    version 2.000000
 
 SYNOPSIS
         use String::Palindrome qw/ is_palindrome /;
@@ -52,18 +52,31 @@ FUNCTIONS
     type of ref, then undef is returned. Additionally, a blank array ref
     also returns undef.
 
+INSTALLATION
+    See perlmodinstall for information and options on installing Perl
+    modules.
+
 AUTHOR
     Adam Lesperance <lespea@gmail.com>
 
 SUPPORT
+  Perldoc
     You can find documentation for this module with the perldoc command.
 
       perldoc String::Palindrome
 
   Websites
+    The following websites have more information about this module, and may
+    be of help to you. As always, in addition to those websites please use
+    your favorite search engine to discover more resources.
+
     *   Search CPAN
 
         <http://search.cpan.org/dist/String-Palindrome>
+
+    *   RT: CPAN's Bug Tracker
+
+        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=String-Palindrome>
 
     *   AnnoCPAN: Annotated CPAN documentation
 
@@ -77,10 +90,6 @@ SUPPORT
 
         <http://cpanforum.com/dist/String-Palindrome>
 
-    *   RT: CPAN's Bug Tracker
-
-        <http://rt.cpan.org/NoAuth/Bugs.html?Dist=String-Palindrome>
-
     *   CPANTS Kwalitee
 
         <http://cpants.perl.org/dist/overview/String-Palindrome>
@@ -93,24 +102,48 @@ SUPPORT
 
         <http://matrix.cpantesters.org/?dist=String-Palindrome>
 
-    *   Source Code Repository
+  Bugs / Feature Requests
+    Please report any bugs or feature requests by email to
+    "bug-string-palindrome at rt.cpan.org", or through the web interface at
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=String-Palindrome>. You
+    will be automatically notified of any progress on the request by the
+    system.
 
-        You can contribute or fork this project via github:
+  Source Code
+    The code is open to the world, and available for you to hack on. Please
+    feel free to browse it and play with it, or whatever. If you want to
+    contribute patches, please send me a diff or prod me to pull from your
+    repository :)
 
-        <http://github.com/lespea/string-palindrome>
+    <https://github.com/lespea/string-palindrome>
 
-            git clone git://github.com/lespea/string-palindrome.git
-
-  Bugs
-    Please report any bugs or feature requests to "bug-string-palindrome at
-    rt.cpan.org", or through the web interface at
-    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=String-Palindrome>. I
-    will be notified, and then you'll automatically be notified of progress
-    on your bug as I make changes.
+      git clone git://github.com/lespea/string-palindrome.git
 
 COPYRIGHT AND LICENSE
     This software is copyright (c) 2010 by Adam Lesperance.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
+
+DISCLAIMER OF WARRANTY
+    BECAUSE THIS SOFTWARE IS LICENSED FREE OF CHARGE, THERE IS NO WARRANTY
+    FOR THE SOFTWARE, TO THE EXTENT PERMITTED BY APPLICABLE LAW. EXCEPT WHEN
+    OTHERWISE STATED IN WRITING THE COPYRIGHT HOLDERS AND/OR OTHER PARTIES
+    PROVIDE THE SOFTWARE "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER
+    EXPRESSED OR IMPLIED, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+    WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE. THE
+    ENTIRE RISK AS TO THE QUALITY AND PERFORMANCE OF THE SOFTWARE IS WITH
+    YOU. SHOULD THE SOFTWARE PROVE DEFECTIVE, YOU ASSUME THE COST OF ALL
+    NECESSARY SERVICING, REPAIR, OR CORRECTION.
+
+    IN NO EVENT UNLESS REQUIRED BY APPLICABLE LAW OR AGREED TO IN WRITING
+    WILL ANY COPYRIGHT HOLDER, OR ANY OTHER PARTY WHO MAY MODIFY AND/OR
+    REDISTRIBUTE THE SOFTWARE AS PERMITTED BY THE ABOVE LICENCE, BE LIABLE
+    TO YOU FOR DAMAGES, INCLUDING ANY GENERAL, SPECIAL, INCIDENTAL, OR
+    CONSEQUENTIAL DAMAGES ARISING OUT OF THE USE OR INABILITY TO USE THE
+    SOFTWARE (INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR DATA BEING
+    RENDERED INACCURATE OR LOSSES SUSTAINED BY YOU OR THIRD PARTIES OR A
+    FAILURE OF THE SOFTWARE TO OPERATE WITH ANY OTHER SOFTWARE), EVEN IF
+    SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE POSSIBILITY OF SUCH
+    DAMAGES.
 
