--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     String::Palindrome - Determine if a string is a palindrome
 
 VERSION
-    version 2.000000
+    version 2.000001
 
 SYNOPSIS
         use String::Palindrome qw/ is_palindrome /;
@@ -72,35 +72,64 @@ SUPPORT
 
     *   Search CPAN
 
+        The default CPAN search engine, useful to view POD in HTML format.
+
         <http://search.cpan.org/dist/String-Palindrome>
 
     *   RT: CPAN's Bug Tracker
 
+        The RT ( Request Tracker ) website is the default bug/issue tracking
+        system for CPAN.
+
         <http://rt.cpan.org/NoAuth/Bugs.html?Dist=String-Palindrome>
 
-    *   AnnoCPAN: Annotated CPAN documentation
+    *   AnnoCPAN
+
+        The AnnoCPAN is a website that allows community annonations of Perl
+        module documentation.
 
         <http://annocpan.org/dist/String-Palindrome>
 
     *   CPAN Ratings
 
+        The CPAN Ratings is a website that allows community ratings and
+        reviews of Perl modules.
+
         <http://cpanratings.perl.org/d/String-Palindrome>
 
     *   CPAN Forum
 
+        The CPAN Forum is a web forum for discussing Perl modules.
+
         <http://cpanforum.com/dist/String-Palindrome>
 
-    *   CPANTS Kwalitee
+    *   CPANTS
+
+        The CPANTS is a website that analyzes the Kwalitee ( code metrics )
+        of a distribution.
 
         <http://cpants.perl.org/dist/overview/String-Palindrome>
 
-    *   CPAN Testers Results
+    *   CPAN Testers
 
-        <http://cpantesters.org/distro/S/String-Palindrome.html>
+        The CPAN Testers is a network of smokers who run automated tests on
+        uploaded CPAN distributions.
+
+        <http://www.cpantesters.org/distro/S/String-Palindrome>
 
     *   CPAN Testers Matrix
 
+        The CPAN Testers Matrix is a website that provides a visual way to
+        determine what Perls/platforms PASSed for a distribution.
+
         <http://matrix.cpantesters.org/?dist=String-Palindrome>
+
+    *   CPAN Testers Dependencies
+
+        The CPAN Testers Dependencies is a website that shows a chart of the
+        test results of all dependencies for a distribution.
+
+        <http://deps.cpantesters.org/?module=String::Palindrome>
 
   Bugs / Feature Requests
     Please report any bugs or feature requests by email to
@@ -120,7 +149,7 @@ SUPPORT
       git clone git://github.com/lespea/string-palindrome.git
 
 COPYRIGHT AND LICENSE
-    This software is copyright (c) 2010 by Adam Lesperance.
+    This software is copyright (c) 2011 by Adam Lesperance.
 
     This is free software; you can redistribute it and/or modify it under
     the same terms as the Perl 5 programming language system itself.
